--- a/content/resources/6-875s05-th.md
+++ b/content/resources/6-875s05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/6-875-cryptography-and-cryptanalysis-spring-2005/b3d0a5e2485c9a196be5fd0aa3975a9e_6-875s05-th.jpg
+file: /courses/6-875-cryptography-and-cryptanalysis-spring-2005/b3d0a5e2485c9a196be5fd0aa3975a9e_6-875s05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Binary code. (Image courtesy of MIT OpenCourseWare.)
@@ -13,4 +13,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-875s05-th.jpg
 uid: b3d0a5e2-485c-9a19-6be5-fd0aa3975a9e
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+New image Upload
+
