--- a/content/resources/6-875s05.md
+++ b/content/resources/6-875s05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Binary code. (Image courtesy of MIT OCW.)
-file: /media/courses/6-875-cryptography-and-cryptanalysis-spring-2005/d5eacb8eb2b75f6cff8265b1eb3d76b6_6-875s05.jpg
+file: /courses/6-875-cryptography-and-cryptanalysis-spring-2005/d5eacb8eb2b75f6cff8265b1eb3d76b6_6-875s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Binary code. (Image courtesy of MIT OpenCourseWare.)
@@ -13,4 +13,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-875s05.jpg
 uid: d5eacb8e-b2b7-5f6c-ff82-65b1eb3d76b6
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Binary code. (Image courtesy of MIT OCW.)
+
