Sync all content

--- a/content/resources/6-875s05.md
+++ b/content/resources/6-875s05.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: A black rectangle filled with binary code in white.  A cartoonish lock
     floats in the upper left hand corner.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-875s05.jpg
@@ -19,4 +20,3 @@ video_metadata:
   youtube_id: null
 ---
 Binary code. (Image courtesy of MIT OCW.)
-
