Sync all content

--- a/content/resources/6-875s05-th.md
+++ b/content/resources/6-875s05-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/6-875-cryptography-and-cryptanalysis-spring-2005/b3d0a5e2485c9a196be5fd0aa3975a9e_6-875s05-th.jpg
+file_size: 10704
 file_type: image/jpeg
 image_metadata:
   caption: Binary code. (Image courtesy of MIT OpenCourseWare.)
