--- a/content/resources/6-875s05.md
+++ b/content/resources/6-875s05.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Binary code. (Image courtesy of MIT OCW.)
 file: /courses/6-875-cryptography-and-cryptanalysis-spring-2005/d5eacb8eb2b75f6cff8265b1eb3d76b6_6-875s05.jpg
+file_size: 111374
 file_type: image/jpeg
 image_metadata:
   caption: Binary code. (Image courtesy of MIT OpenCourseWare.)
